2001-05-28  Sven Wischnowsky  <wischnow@zsh.org>

	* 14503: Src/exec.c: another attempt at fixing the job problem
	from 14327; make execpline() reset list_pipe_job to zero if it
	would be set for a job started in the background

2001-05-27  Bart Schaefer  <schaefer@zsh.org>

	* unposted: Etc/MACHINES: Mention failure of gcc 2.7.1 on HPUX,
	and need for --disable-lfs on Solaris 2.6.

2001-05-27  Clint Adams  <clint@zsh.org>

  	* 14492: Functions/Prompts/.distfiles,
	Functions/Prompts/prompt_clint_setup:
	additional prompt theme.

2001-05-26  Wayne Davison  <wayned@users.sourceforge.net>

	* 14488: Src/Zle/zle_hist.c: fixed accept-and-infer-next-history
	when called repeatedly.  Also made the infer actions and
	accept-line-and-down-history not get tripped up by transitory
	changes to the history data.

2001-05-26  Andrej Borsenkow <bor@zsh.org>

	* 14489: Test/C02cond.ztst: workaround for (probably) find
	bug on ReliantUNIX made visible by 14484.

2001-05-25  Bart Schaefer  <schaefer@zsh.org>

	* 14484: Test/C02cond.ztst: Print a warning and skip the -b test
	if no block devices can be found (test only ! -b in that case).

2001-05-25  Clint Adams  <schizo@debian.org>

	* 14479: Completion/Debian/Command/_apt: add --reinstall.

2001-05-24  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* from Bart: Etc/FAQ.yo: changes for 4.0.1, already installed
	at http://sunsite.dk/zsh/FAQ/.

2001-05-23  Bart Schaefer  <schaefer@zsh.org>

	* 14461: Test/V01zmodload.ztst: Change the unloading test to be
	sure that modules are not unloaded until their dependencies have
	been unloaded.

2001-05-23  Oliver Kiddle  <opk@zsh.org>

	* unposted: Src/signals.c, Src/utils.c: add missing mod_exports

2001-05-22  Peter Stephenson  <pws@csr.com>

	* 14430: Test/ztst.zsh: Be less cavalier about exiting on failure
	so as to perform cleanup.

2001-05-21  Clint Adams  <clint@zsh.org>

	* 14419: Src/Builtins/rlimits.awk: handle glibc 2.2.3
	rlimits enum.
